--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "path": "^0.12.7",
     "sequelize": "^5.21.7",
     "unsplash-js": "^6.0.0"
